@@ -11,6 +11,8 @@
 - Added Multi-object edit capabilities to virtual cameras and extensions 
 - Improved performance of path gizmo drawing- Timeline Scrub Bubble now supports nested timelines, with some known limitations to be addressed with a future Timeline package release
 - Added support for deterministic noise in the context of controlled rendering (via CinemachineCore.CurrentTimeOverride)
+- Bugfix (1266191) Clicking on foldout labels in preferences panel toggles their expanded state
+- Bugfix (1266196) Composer target Size label in preferences panel too big
 
 <size=20><b>Version 2.6.0</b></size>
 
